Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16027

Debugger views are not perspective-sensitive

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.0.0-rc1
    • Qt Creator 4.0.0-rc1
    • Debugger
    • None
    • 01f4e4a8c6eff3bb31948169dc10c75c4338183d

      All the views appear for all the perspectives in the Views menu.

      Some debugger docks are even visible by default when running Callgrind...

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes